--- a/.github/workflows/deploy_server.yml
+++ b/.github/workflows/deploy_server.yml
@@ -26,12 +26,12 @@ jobs:
             find  /personal/note -type f ! -name ".htaccess" ! -name ".user.ini" -delete
             find  /personal/note -type d -empty -delete
       - name: Copy New Files
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: ./
-          target: /personal/note
+        uses: wlixcc/SFTP-Deploy-Action@v1.0 
+        with:  
+          username: ${{ secrets.SERVER_USERNAME }}    #ssh user name
+          host: ${{ secrets.SERVER_IP }}              #引用之前创建好的secret
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
+          local_path: './'  # 对应我们项目build的文件夹路径
+          remote_path: '/personal/note'
         env:
           LANG: en_US.UTF-8
