--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,20 +24,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: gh-pages 
-      - name: Configure SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          chmod 744 ~/.ssh
-      - name: Add SSH known hosts
-        run: |
-          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-          chmod 744 ~/.ssh/known_hosts
-      - name: Sync Repository
-        run: |
-          git remote add myserver git://${{ secrets.SERVER_IP }}/personal/repo/note.git
-          git push myserver gh-pages:gh-pages
-      - name: Remove SSH directory
-        run: rm -rf ~/.ssh
-          
+      - name: Sync code
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            git pull
