--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,5 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             export ALL_PROXY=${{ secrets.SERVER_PROXY }}
-            cd /personal/repo/note.git
+            cd /personal/repo/note
             git pull
