--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,4 @@ jobs:
             export ALL_PROXY=${{ secrets.SERVER_PROXY }}
             cd /personal/repo/note
             git pull
+            git reset --hard origin/gh-pages
