--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,7 @@ jobs:
           script: |
             export ALL_PROXY=${{ secrets.SERVER_PROXY }}
             cd /personal/repo/note
-            git pull
+            git fetch origin
             git reset --hard origin/gh-pages
+            git clean -df
+            git pull
