--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,10 +79,14 @@ markdown_extensions:
       generic: true
 
 extra_javascript:
-  - js/katex.min.js
-  - js/katex.js
-  # - https://polyfill.io/v3/polyfill.min.js?features=es6
-  # - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js
+  # 使用 katex
+  # - js/katex.min.js
+  # - js/katex.js
+
+  # 使用 mathjax
+  - js/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 extra_css:
   - stylesheets/katex.min.css
   - stylesheets/extra.css
@@ -102,6 +106,8 @@ nav:
     - "CV":
       - "特征匹配": 
         - "LBD 线特征描述算法": paper/CV/特征匹配/LBD线特征描述算法.md
+      - "SfM":
+        - "SfM 回顾": paper/CV/SfM/Structure-from-Motion_Revisited.md
   - "课程":
     - "专业相关":
       - "摄影测量":
