--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,13 +80,18 @@ markdown_extensions:
 
 extra_javascript:
   # 使用 katex
-  # - js/katex.min.js
-  # - js/katex.js
+  # - javascripts/katex.js
+  # - javascripts/katex.min.js
+  # - javascripts/auto-render.min.js
+
+  # - javascripts/katex.js 
+  # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js  
+  # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
 
   # 使用 mathjax
-  - js/mathjax.js
+  - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://cdn.zerolacqua.top/npm/mathjax/es5/tex-mml-chtml.js
 extra_css:
   - stylesheets/katex.min.css
   - stylesheets/extra.css
