--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,8 @@ nav:
         - "用于高效 SfM 的骨架图": paper/CV/SfM/Skeletal_graphs_for_efficient_structure_from_motion.md
         - "基于分层聚类树的 SfM ": paper/CV/SfM/Structure-and-motion_pipeline_on_a_hierarchical_cluster_tree.md
         - "提高分层 SfM 效率": paper/CV/SfM/Improving_the_efficiency_of_hierarchical_structure-and-motion.md
+        - "线性时间的增量式 SfM（VisualSFM）": paper/CV/SfM/Towards_Linear-Time_Incremental_Structure-from-Motion.md
+        - "通过互联网影像重建世界（Bundler）": paper/CV/SfM/Modeling_the_World_from_Internet_Photo_Collections.md
 
 
   - "课程":
