--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -118,7 +118,7 @@ nav:
         - "提高分层 SfM 效率": paper/CV/SfM/Improving_the_efficiency_of_hierarchical_structure-and-motion.md
         - "线性时间的增量式 SfM（VisualSFM）": paper/CV/SfM/Towards_Linear-Time_Incremental_Structure-from-Motion.md
         - "通过互联网影像重建世界（Bundler）": paper/CV/SfM/Modeling_the_World_from_Internet_Photo_Collections.md
-
+        - "相片旅行：在三维世界中浏览相片": paper/CV/SfM/Photo_Tourism_Exploring_Photo_Collections_in_3D.md 
 
   - "课程":
     - "专业相关":
