--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,7 +113,7 @@ extra_javascript:
   - https://unpkg.com/markmap-view@0.15.3/dist/browser/index.js
 
 extra_css:
-  - stylesheets/katex.min.css
+  # - stylesheets/katex.min.css
   - stylesheets/extra.css
 
 nav:
