--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -143,6 +143,7 @@ nav:
         - "一天建成罗马": paper/CV/SfM/Building_Rome_in_a_Day.md
         - "大规模无人机影像的高效 SfM": paper/CV/SfM/Efficient_structure_from_motion_for_large-scale_UAV_images_A_review_and_a_comparison_of_SfM_tools.md
         - "多核光束法平差": paper/CV/SfM/Multicore_Bundle_Adjustment.md
+        - "基于 RANSAC 通用 Procrustes 分析的高效树状 SFM": paper/CV/SfM/Efficient_tree-structured_SfM_by_RANSAC_generalized_Procrustes_analysis.md
 
   - "课程":
     - "专业相关":
