--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -129,9 +129,9 @@ nav:
         - "A combined image matching method for Chinese optical satellite imagery": paper/RS/UAV/中国光学卫星影像匹配融合方法.md
         - "南极无人机摄影测量论文概览": paper/RS/UAV/南极无人机摄影测量论文概览.md
     - "CV":
-      - "特征匹配": 
-        - "LBD 线特征描述算法": paper/CV/特征匹配/LBD线特征描述算法.md
-        - "从人工特征到深度特征的图像匹配调查": paper/CV/SfM/Image_Matching_from_Handcrafted_to_Deep_Features_A_Survey.md
+      - "图像匹配": 
+        - "LBD 线特征描述算法": paper/CV/image_matching/LBD线特征描述算法.md
+        - "从人工特征到深度特征的图像匹配调查": paper\CV\image_matching\Image_Matching_from_Handcrafted_to_Deep_Features_A_Survey.md
       - "SfM":
         - "SfM 回顾（Colmap）": paper/CV/SfM/Structure-from-Motion_Revisited.md
         - "用于高效 SfM 的骨架图": paper/CV/SfM/Skeletal_graphs_for_efficient_structure_from_motion.md
