--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: ci 
+name: ci
 on:
   workflow_dispatch:
   push:
     branches:
-      - master 
+      - master
       - main
 permissions:
   contents: write
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
+      - run: pip install mkdocs=1.6.0
       - run: pip install mkdocs-material #=9.2.3
       - run: pip install mkdocs-markmap
       - run: mkdocs gh-deploy --force
@@ -25,7 +26,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          ref: gh-pages 
+          ref: gh-pages
       - name: Sync code
         uses: appleboy/ssh-action@master
         with:
