--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - run: pip install mkdocs=1.6.0
+      - run: pip install mkdocs==1.6.0
       - run: pip install mkdocs-material #=9.2.3
       - run: pip install mkdocs-markmap
       - run: mkdocs gh-deploy --force
