--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,14 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - run: pip install mkdocs==1.6.0
-      - run: pip install mkdocs-material==9.2.3
-      - run: pip install mkdocs-material-extensions==1.1.1
-      - run: pip install mkdocs-markmap
-      - run: pip install mkdocs-jupyter
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - run: pip install -r requirements.txt
       - run: mkdocs gh-deploy --force
   Sync:
     needs: deploy
