--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.betterem:
-      smart_enable: none
+      smart_enable: underscore
   - pymdownx.caret
   - pymdownx.details
   - pymdownx.inlinehilite
