--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,6 +166,7 @@ nav:
               - "南大计算机系统 PA": course/CS/南大计算机系统PA.md
           - "others":
               - "逻辑学导论": course/others/逻辑学导论.md
+              - "音乐欣赏": course/others/音乐欣赏.md
   - "编程":
       - "C++":
           - "C++ 标准中值得使用的功能🍭": programming/cpp/C++标准中值得使用的功能.md
