--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,6 +134,7 @@ nav:
       - "CV":
           - "图像匹配":
               - "LBD 线特征描述算法": paper/CV/image_matching/LBD线特征描述算法.md
+              - "Sample4Geo: Hard Negative Sampling for Cross-View Geo-Localisation": paper/CV/image_matching/Sample4Geo_Hard_Negative_Sampling_for_Cross-View_Geo-Localisation.md
               - "从人工特征到深度特征的图像匹配调查": paper/CV/image_matching/Image_Matching_from_Handcrafted_to_Deep_Features_A_Survey.md
           - "SfM":
               - "SfM 回顾（Colmap）": paper/CV/SfM/Structure-from-Motion_Revisited.md
