--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,7 +124,7 @@ extra_css:
   - stylesheets/extra.css
 
 nav:
-  - "主页": index.md
+  - "首页": index.md
   - "论文":
       - "RS":
           - "UAV":
