--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -147,9 +147,9 @@ nav:
               - "一天建成罗马": paper/CV/SfM/Building_Rome_in_a_Day.md
               - "大规模无人机影像的高效 SfM": paper/CV/SfM/Efficient_structure_from_motion_for_large-scale_UAV_images_A_review_and_a_comparison_of_SfM_tools.md
               - "多核光束法平差": paper/CV/SfM/Multicore_Bundle_Adjustment.md
-              - "基于 RANSAC 通用 Procrustes 分析的高效树状 SFM": paper/CV/SfM/Efficient_tree-structured_SfM_by_RANSAC_generalized_Procrustes_analysis.md
+              - "基于 RANSAC 通用 Procrustes 分析的高效树状 SfM": paper/CV/SfM/Efficient_tree-structured_SfM_by_RANSAC_generalized_Procrustes_analysis.md
               - "使用图分割的分治高效大规模 SfM": paper/CV/SfM/Divide_and_Conquer_Efficient_Large_Scale_Structure_from_Motion_Using_Graph_Partitioning.md
-
+              - "实时 SfM：一种面向多智能体时空无序高分辨率影像的鲁棒近实时 SfM 方法": paper/CV/SfM/SfM_on-the-fly:_A_robust_near_real-time_SfM_for_spatiotemporally_disordered_high-resolution_imagery_from_multiple_agents.md
   - "课程":
       - "专业相关":
           - "摄影测量":
